--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
     branches: ["main"]
 
 jobs:
-  test:
+  springboot-test:
     runs-on: ubuntu-latest
     
     steps:
@@ -24,3 +24,15 @@ jobs:
         cache: maven
     - name: Test with maven
       run: mvn -B test
+
+  snyk-scanning:
+    needs: springboot-test
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - name: Run Snyk to check for vulnerabilities
+      uses: snyk/actions/maven@master
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+    
